[package]
name = "requiem_nif"
version = "0.3.9"
authors = []
edition = "2021"

[lib]
name = "requiem_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1

[dependencies]
rustler = "0.22"
socket2 = { version= "0.2", features = ["reuseport"] }
num_cpus = "1.13"
quiche = "0.12.0"
crossbeam-channel = "0.5"
