[package]
name = "requiem_nif"
version = "0.4.3"
authors = []
edition = "2021"

[lib]
name = "requiem_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
rustler = "0.22"
socket2 = { version= "0.4", features = ["all"] }
num_cpus = "1.13"
log = "0.4.16"
simplelog = "0.10.0"
quiche = { git ="https://github.com/lyokato/quiche", branch = "0.12.0-path-validation" }
crossbeam-channel = "0.5"
ring = "0.16"
